Fix build warnings and improve code style
- Simplify code
- Avoid unnecessary boxing and unboxing
- Use modern language features
- Remove redundant code contructs